--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 			<a href="https://learn.blue0x.com" class="smoothScroll">Learn More</a>
 			<a href="https://learn.blue0x.com/setup/vps/" class="smoothScroll">Need a Wallet?</a>
 			<a href="https://twitter.com/Blue0x_com"><i class="fab fa-twitter"></i></a>
+			<a href="https://t.me/blue0xcom"><i class="fab fa-telegram-plane"></i></a>
 			<a href="https://discord.gg/8db6CRqM4H"><i class="fab fa-discord"></i></a>
 			<a href="https://github.com/theBlue0x"><i class="fab fa-github"></i></a>
-			<a href="https://t.me/blue0xcom"><i class="fab fa-telegram"></i></a>
 		</div>
 		<div id="menuToggle"><i class="fas fa-bars"></i></div>
 	</nav>
