add currency select

--- a/index2.html
+++ b/index2.html
@@ -34,21 +34,7 @@
 				<h1>BLUE0X|<span>MARKET</span></h1>
 				<h2>BLUE0X <span>MARKET</span></h2>
 			</br>
-				<div class="form-group">
-                <label for="currency"><span>Select Your Currency:</span></label>
-                <select class="form-control m-bot15" id="currency" onchange="location = this.value;">>
-                	<option value="">Select Currency...</option>
-                  	<option value="index2.html">USDX - United States Dollar</option>
-                  	<option value="">AUDX - Australian Dollar (Coming Soon!)</option>
-                  	<option value="">CHFX - Swiss Franc (Coming Soon!)</option>
-                  	<option value="">CNYX - Chinese Yuan (Coming Soon!)</option>
-                  	<option value="">EURX - Euro (Coming Soon!)</option>
-                  	<option value="">GBPX - British Pound (Coming Soon!)</option>
-                  	<option value="">IRRX - Iranian Rial (Coming Soon!)</option>
-                  	<option value="">JPYX - Japanese Yen (Coming Soon!)</option>
-                  	<option value="">NZDX - New Zealand Dollar (Coming Soon!)</option>
-                </select>
-              </div>
+				<a type="button" class="btn btn-primary" href="./market/index_v.html">&nbsp;View All&nbsp;</a>&ensp;<a type="button" class="btn btn-primary"href="./market/index_l.html">Sell Item</a>
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /headerwrap -->
