add currency select

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
 				<h2>BLUE0X <span>MARKET</span></h2>
 			</br>
 				<div class="form-group">
-                <label for="currency"><span>Select Your Currency:</span></label>
                 <select class="form-control m-bot15" id="currency" onchange="location = this.value;">>
-                	<option value="">Select Currency...</option>
+                	<option value="">Select Your Currency...</option>
                   	<option value="index2.html">USDX - United States Dollar</option>
                   	<option value="">AUDX - Australian Dollar (Coming Soon!)</option>
                   	<option value="">CHFX - Swiss Franc (Coming Soon!)</option>
