add currency select

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 			<div class="row">
 				<h1>BLUE0X|<span>MARKET</span></h1>
 				<h2>BLUE0X <span>MARKET</span></h2>
+				<p style="color:white;">Buy and sell anything without fiat currency.</p>
 			</br>
-				<div class="form-group">
                 <select class="form-control m-bot15" id="currency" onchange="location = this.value;">>
                 	<option value="">Select Your Currency...</option>
                   	<option value="index2.html">USDX - United States Dollar</option>
@@ -46,7 +46,6 @@
                   	<option value="">JPYX - Japanese Yen (Coming Soon!)</option>
                   	<option value="">NZDX - New Zealand Dollar (Coming Soon!)</option>
                 </select>
-              </div>
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /headerwrap -->
