add currency select

--- a/index.html
+++ b/index.html
@@ -32,20 +32,19 @@
 			<div class="row">
 				<h1>BLUE0X|<span>MARKET</span></h1>
 				<h2>BLUE0X <span>MARKET</span></h2>
-				</br>
 				<p style="color:white;">Buy and sell anything without fiat currency.</p>
-                <select class="form-control m-bot15" id="currency" onchange="location = this.value;">>
-                	<option value="">Select Your Currency...</option>
-                  	<option value="index2.html">USDX - United States Dollar</option>
-                  	<option value="">AUDX - Australian Dollar (Coming Soon!)</option>
-                  	<option value="">CHFX - Swiss Franc (Coming Soon!)</option>
-                  	<option value="">CNYX - Chinese Yuan (Coming Soon!)</option>
-                  	<option value="">EURX - Euro (Coming Soon!)</option>
-                  	<option value="">GBPX - British Pound (Coming Soon!)</option>
-                  	<option value="">IRRX - Iranian Rial (Coming Soon!)</option>
-                  	<option value="">JPYX - Japanese Yen (Coming Soon!)</option>
-                  	<option value="">NZDX - New Zealand Dollar (Coming Soon!)</option>
-                </select>
+				<select class="form-control m-bot15" id="currency" onchange="location = this.value;">>
+					<option value="">Select Your Currency...</option>
+					<option value="usdx.html">USDX - United States Dollar</option>
+					<option value="">AUDX - Australian Dollar (Coming Soon!)</option>
+					<option value="">CHFX - Swiss Franc (Coming Soon!)</option>
+					<option value="">CNYX - Chinese Yuan (Coming Soon!)</option>
+					<option value="">EURX - Euro (Coming Soon!)</option>
+					<option value="">GBPX - British Pound (Coming Soon!)</option>
+					<option value="">IRRX - Iranian Rial (Coming Soon!)</option>
+					<option value="">JPYX - Japanese Yen (Coming Soon!)</option>
+					<option value="">NZDX - New Zealand Dollar (Coming Soon!)</option>
+				</select>
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /headerwrap -->
