--- a/market/usdx/ListNewItem.html
+++ b/market/usdx/ListNewItem.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Blue0x Decentralized Marketplace">
-  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="shortcut icon" href="../img/favicon.ico">
   <title>Blue0x | MARKET</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap-reset.css" rel="stylesheet">
-  <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-  <link href="css/style.min.css" rel="stylesheet">
-  <link href="css/style-responsive.css" rel="stylesheet" />
-  <link href="assets/fancybox/jquery.fancybox.css" rel="stylesheet" />
-  <link href="css/gallery.css" rel="stylesheet" />
+  <link href="../css/bootstrap.min.css" rel="stylesheet">
+  <link href="../css/bootstrap-reset.css" rel="stylesheet">
+  <link href="../assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="../css/style.min.css" rel="stylesheet">
+  <link href="../css/style-responsive.css" rel="stylesheet" />
+  <link href="../assets/fancybox/jquery.fancybox.css" rel="stylesheet" />
+  <link href="../css/gallery.css" rel="stylesheet" />
   <script>
   function setButtonText() {
     var translatedPostButtonText = $.t("button_post_item");
@@ -169,7 +169,7 @@ hr {
 </head>
 <body class="full-width" onload="setAccountNumber(); setLanguage(); setButtonText();">
   <section id="container">
-    <script type="text/javascript" src="js/menu.js"></script>
+    <script type="text/javascript" src="../js/menu.js"></script>
     <section id="main-content">
       <section class="wrapper">
         <div class="row">
@@ -705,7 +705,7 @@ hr {
                   <i class="fa fa-camera-retro"></i>
                   <input type="text" maxlength="50" class="form-control" data-i18n="[placeholder]placeholder_optional" id="main_image_url" onblur="setPreviewImageURL(this, 0);">
                 </div>
-                <a id="previewImageLink" class="fancybox" rel="group" href="img/package.png">Preview Image</a>
+                <a id="previewImageLink" class="fancybox" rel="group" href="../img/package.png">Preview Image</a>
                 <div id="previewImageErrorMessage"></div>
               </div>
               <!--Image Help Modal-->
@@ -747,28 +747,28 @@ hr {
                       <i class="fa fa-camera-retro"></i>
                       <input type="text" maxlength="75" class="form-control" data-i18n="[placeholder]image1" id="additional_image_1_url" onblur="setPreviewImageURL(this, 2);">
                     </div>
-                    <a id="previewImageLink2" class="fancybox" rel="group" href="img/package.png">Preview Image</a>
+                    <a id="previewImageLink2" class="fancybox" rel="group" href="../img/package.png">Preview Image</a>
                     <div id="previewImageErrorMessage2"></div>
                     <br />
                     <div class="iconic-input">
                       <i class="fa fa-camera-retro"></i>
                       <input type="text" maxlength="75" class="form-control" data-i18n="[placeholder]image2" id="additional_image_2_url" onblur="setPreviewImageURL(this, 3);">
                     </div>
-                    <a id="previewImageLink3" class="fancybox" rel="group" href="img/package.png">Preview Image</a>
+                    <a id="previewImageLink3" class="fancybox" rel="group" href="../img/package.png">Preview Image</a>
                     <div id="previewImageErrorMessage3"></div>
                     <br />
                     <div class="iconic-input">
                       <i class="fa fa-camera-retro"></i>
                       <input type="text" maxlength="75" class="form-control" data-i18n="[placeholder]image3" id="additional_image_3_url" onblur="setPreviewImageURL(this, 4);">
                     </div>
-                    <a id="previewImageLink4" class="fancybox" rel="group" href="img/package.png">Preview Image</a>
+                    <a id="previewImageLink4" class="fancybox" rel="group" href="../img/package.png">Preview Image</a>
                     <div id="previewImageErrorMessage4"></div>
                     <br />
                     <div class="iconic-input">
                       <i class="fa fa-camera-retro"></i>
                       <input type="text" maxlength="75" class="form-control" data-i18n="[placeholder]image4" id="additional_image_4_url" onblur="setPreviewImageURL(this, 5);">
                     </div>
-                    <a id="previewImageLink5" class="fancybox" rel="group" href="img/package.png">Preview Image</a>
+                    <a id="previewImageLink5" class="fancybox" rel="group" href="../img/package.png">Preview Image</a>
                     <div id="previewImageErrorMessage5"></div>
                   </div>
                   <hr>
@@ -813,23 +813,23 @@ hr {
         </div>
       </section>
     </section>
-    <script src="js/jquery.min.js"></script>
-    <script src="assets/fuelux/js/spinner.min.js"></script>
-    <script src="assets/fancybox/jquery.fancybox.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.dcjqaccordion.2.7.min.js"></script>
-    <script src="js/bootstrap-hover-dropdown.min.js"></script>
-    <script src="js/advanced-form-components.js"></script>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../assets/fuelux/js/spinner.min.js"></script>
+    <script src="../assets/fancybox/jquery.fancybox.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/jquery.dcjqaccordion.2.7.min.js"></script>
+    <script src="../js/bootstrap-hover-dropdown.min.js"></script>
+    <script src="../js/advanced-form-components.js"></script>
     <script>
       $(function() {
         jQuery(".fancybox").fancybox();
       });
     </script>
-    <script src="js/constants.js"></script>
-    <script src="js/freemarket_scripts.js"></script>
-    <script src="js/common-scripts.js"></script>
-    <script src="js/i18next.min.js"></script>
-    <script src="js/freemarket_localization_scripts.js"></script>
+    <script src="../js/constants.js"></script>
+    <script src="../js/freemarket_scripts.js"></script>
+    <script src="../js/common-scripts.js"></script>
+    <script src="../js/i18next.min.js"></script>
+    <script src="../js/freemarket_localization_scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.0.1/html5-qrcode.min.js"></script>
 </body>
 </html>
