--- a/market/usdx/ViewYourPurchases.html
+++ b/market/usdx/ViewYourPurchases.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Blue0x Decentralized Marketplace">
-  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="shortcut icon" href="../img/favicon.ico">
   <title>Blue0x | MARKET</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap-reset.css" rel="stylesheet">
-  <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-  <link href="css/style.min.css" rel="stylesheet">
-  <link href="css/style-responsive.css" rel="stylesheet" />
-  <link href="css/spinner.css" rel="stylesheet">
+  <link href="../css/bootstrap.min.css" rel="stylesheet">
+  <link href="../css/bootstrap-reset.css" rel="stylesheet">
+  <link href="../assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="../css/style.min.css" rel="stylesheet">
+  <link href="../css/style-responsive.css" rel="stylesheet" />
+  <link href="../css/spinner.css" rel="stylesheet">
 </head>
 <script>
 // Redirect the user if the user is not already logged in
@@ -30,8 +30,7 @@ function checkLogin() {
 </script>
 <body class="full-width" onload="getAccount(); setAccountNumber(); checkLogin(); setLanguage();">
   <section id="container">
-    <script type="text/javascript" src="js/menu.js">
-    </script>
+    <script type="text/javascript" src="../js/menu.js"></script>
     <section id="main-content">
       <section class="wrapper site-min-height">
         <div class="row">
@@ -62,15 +61,15 @@ function checkLogin() {
         </div>
       </section>
     </section>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.dcjqaccordion.2.7.min.js"></script>
-    <script src="js/bootstrap-hover-dropdown.min.js"></script>
-    <script src="js/constants.js"></script>
-    <script src="js/freemarket_scripts.js"></script>
-    <script src="js/common-scripts.js"></script>
-    <script src="js/i18next.min.js"></script>
-    <script src="js/freemarket_localization_scripts.js"></script>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/jquery.dcjqaccordion.2.7.min.js"></script>
+    <script src="../js/bootstrap-hover-dropdown.min.js"></script>
+    <script src="../js/constants.js"></script>
+    <script src="../js/freemarket_scripts.js"></script>
+    <script src="../js/common-scripts.js"></script>
+    <script src="../js/i18next.min.js"></script>
+    <script src="../js/freemarket_localization_scripts.js"></script>
     <script>
     var user = sessionStorage.getItem("accountRS");
     var fmlang = localStorage.getItem("fmlang");
