--- a/market/usdx/SearchByLocation.html
+++ b/market/usdx/SearchByLocation.html
@@ -4,19 +4,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Blue0x Decentralized Marketplace">
-  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="shortcut icon" href="../img/favicon.ico">
   <title>Blue0x | MARKET</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap-reset.css" rel="stylesheet">
-  <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-  <link href="css/style.min.css" rel="stylesheet">
-  <link href="css/style-responsive.css" rel="stylesheet" />
-  <link href="css/spinner.css" rel="stylesheet">
+  <link href="../css/bootstrap.min.css" rel="stylesheet">
+  <link href="../css/bootstrap-reset.css" rel="stylesheet">
+  <link href="../assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="../css/style.min.css" rel="stylesheet">
+  <link href="../css/style-responsive.css" rel="stylesheet" />
+  <link href="../css/spinner.css" rel="stylesheet">
 </head>
 <body class="full-width" onload="setAccountNumber(); setLanguage();">
   <section id="container">
-    <script type="text/javascript" src="js/menu.js">
-    </script>
+    <script type="text/javascript" src="../js/menu.js"></script>
     <section id="main-content">
       <section class="wrapper site-min-height">
         <div class="row">
@@ -474,16 +473,15 @@
         </div>
       </section>
     </section>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.dcjqaccordion.2.7.min.js"></script>
-    <script src="js/bootstrap-hover-dropdown.min.js"></script>
-    <script src="js/constants.js"></script>
-    <script src="js/freemarket_scripts.js"></script>
-    <script src="js/common-scripts.js"></script>
-    <script src="js/i18next.min.js"></script>
-    <script src="js/freemarket_localization_scripts.js"></script>
-    
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/jquery.dcjqaccordion.2.7.min.js"></script>
+    <script src="../js/bootstrap-hover-dropdown.min.js"></script>
+    <script src="../js/constants.js"></script>
+    <script src="../js/freemarket_scripts.js"></script>
+    <script src="../js/common-scripts.js"></script>
+    <script src="../js/i18next.min.js"></script>
+    <script src="../js/freemarket_localization_scripts.js"></script> 
     <script>
     function searchLocation() {
     document.getElementById("table_body").innerHTML = "";
