--- a/market/usdx/ViewYourExpiredItems.html
+++ b/market/usdx/ViewYourExpiredItems.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Blue0x Decentralized Marketplace">
-  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="shortcut icon" href="../img/favicon.ico">
   <title>Blue0x | MARKET</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap-reset.css" rel="stylesheet">
-  <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-  <link href="css/style.min.css" rel="stylesheet">
-  <link href="css/style-responsive.css" rel="stylesheet" />
-  <link href="css/spinner.css" rel="stylesheet">
+  <link href="../css/bootstrap.min.css" rel="stylesheet">
+  <link href="../css/bootstrap-reset.css" rel="stylesheet">
+  <link href="../assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="../css/style.min.css" rel="stylesheet">
+  <link href="../css/style-responsive.css" rel="stylesheet" />
+  <link href="../css/spinner.css" rel="stylesheet">
 </head>
 <script>
 function checkLogin() {
@@ -23,14 +23,14 @@ function checkLogin() {
 </script>
 <body class="full-width" onload="setAccountNumber(); checkLogin(); setLanguage();">
   <section id="container">
-    <script type="text/javascript" src="js/menu.js"></script>
+    <script type="text/javascript" src="../js/menu.js"></script>
     <section id="main-content">
       <section class="wrapper site-min-height">
         <div class="row">
           <div class="col-lg-12">
             <section class="panel">
               <header class="panel-heading">
-                <span data-i18n="header_your_pending_sales">Your Pending Sales</span>
+                <span data-i18n="header_all_your_expired_items">Your Expired Items</span>
               </header>
               <div class="panel-body">
                 <div id="error-message">
@@ -53,20 +53,20 @@ function checkLogin() {
         </div>
       </section>
     </section>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.dcjqaccordion.2.7.min.js"></script>
-    <script src="js/bootstrap-hover-dropdown.min.js"></script>
-    <script src="js/constants.js"></script>
-    <script src="js/freemarket_scripts.js"></script>
-    <script src="js/common-scripts.js"></script>
-    <script src="js/i18next.min.js"></script>
-    <script src="js/freemarket_localization_scripts.js"></script>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/jquery.dcjqaccordion.2.7.min.js"></script>
+    <script src="../js/bootstrap-hover-dropdown.min.js"></script>
+    <script src="../js/constants.js"></script>
+    <script src="../js/freemarket_scripts.js"></script>
+    <script src="../js/common-scripts.js"></script>
+    <script src="../js/i18next.min.js"></script>
+    <script src="../js/freemarket_localization_scripts.js"></script>
     <script>
     var user = sessionStorage.getItem("accountRS");
     var fmlang = localStorage.getItem("fmlang");
     $.getJSON(Constants.apiUrl, {
-      requestType: "getDGSPendingPurchases", 
+      requestType: "getDGSExpiredPurchases", 
       seller: user
     }, 
       function(request) {
@@ -76,8 +76,8 @@ function checkLogin() {
       var id = request.purchases[i].goods;
       var rows;
       rows += '<tr>';
-      rows += '<td><a href=\'ViewYourItemPending.html?setLng=' + fmlang + '&itemid=' + id + '&purchaseid=' + purchaseID + '\'>' + id + '</a></td>';
-      rows += '<td><a href=\'ViewYourItemPending.html?setLng=' + fmlang + '&itemid=' + id + '&purchaseid=' + purchaseID + '\'>' + escapeHtml(pending.name) + '</a></td>';
+      rows += '<td><a href=\'ViewYourItemExpired.html?setLng=' + fmlang + '&itemid=' + id + '&purchaseid=' + purchaseID + '\'>' + id + '</a></td>';
+      rows += '<td><a href=\'ViewYourItemExpired.html?setLng=' + fmlang + '&itemid=' + id + '&purchaseid=' + purchaseID + '\'>' + escapeHtml(pending.name) + '</a></td>';
       rows += '</tr>';
     };
     $("#table_body").html(rows);
