--- a/market/usdx/ViewYourItemPending.html
+++ b/market/usdx/ViewYourItemPending.html
@@ -4,16 +4,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Blue0x Decentralized Marketplace">
-  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="shortcut icon" href="../img/favicon.ico">
   <title>Blue0x | MARKET</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap-reset.css" rel="stylesheet">
-  <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-  <link href="css/style.min.css" rel="stylesheet">
-  <link href="css/style-responsive.css" rel="stylesheet" />
-  <link href="css/spinner.css" rel="stylesheet">
-  <link href="assets/fancybox/jquery.fancybox.css" rel="stylesheet" />
-  <link href="css/gallery.css" rel="stylesheet" />
+  <link href="../css/bootstrap.min.css" rel="stylesheet">
+  <link href="../css/bootstrap-reset.css" rel="stylesheet">
+  <link href="../assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="../css/style.min.css" rel="stylesheet">
+  <link href="../css/style-responsive.css" rel="stylesheet" />
+  <link href="../css/spinner.css" rel="stylesheet">
+  <link href="../assets/fancybox/jquery.fancybox.css" rel="stylesheet" />
+  <link href="../css/gallery.css" rel="stylesheet" />
   <script>
   function showItem() {
     var listingid = (getQueryVariable("itemid"));
@@ -446,7 +446,7 @@
 </head>
 <body class="full-width" onload="setAccountNumber(); showItem(); setLanguage();">
   <section id="container">
-    <script type="text/javascript" src="js/menu.js"></script>
+    <script type="text/javascript" src="../js/menu.js"></script>
     <section id="main-content">
       <section class="wrapper">
         <div class="row">
@@ -544,22 +544,22 @@
       </section>
     </section>
   </section>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery.dcjqaccordion.2.7.min.js"></script>
-  <script src="js/bootstrap-hover-dropdown.min.js"></script>
-  <script src="assets/fancybox/jquery.fancybox.js"></script>
-  <script src="js/validator.min.js"></script>
+  <script src="../js/jquery.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/jquery.dcjqaccordion.2.7.min.js"></script>
+  <script src="../js/bootstrap-hover-dropdown.min.js"></script>
+  <script src="../assets/fancybox/jquery.fancybox.js"></script>
+  <script src="../js/validator.min.js"></script>
   <script type="text/javascript">
   $(function() {
     jQuery(".fancybox").fancybox();
   });
   </script>
-  <script src="js/constants.js"></script>
-  <script src="js/freemarket_scripts.js"></script>
-  <script src="js/common-scripts.js"></script>
-  <script src="js/i18next.min.js"></script>
-  <script src="js/freemarket_localization_scripts.js"></script>
+  <script src="../js/constants.js"></script>
+  <script src="../js/freemarket_scripts.js"></script>
+  <script src="../js/common-scripts.js"></script>
+  <script src="../js/i18next.min.js"></script>
+  <script src="../js/freemarket_localization_scripts.js"></script>
   <script>
     function finalize() {
     var item = (getQueryVariable("purchaseid"));
