--- a/market/usdx/ViewYourItemSingle.html
+++ b/market/usdx/ViewYourItemSingle.html
@@ -4,17 +4,45 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Blue0x Decentralized Marketplace">
-  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="shortcut icon" href="../img/favicon.ico">
   <title>Blue0x | MARKET</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap-reset.css" rel="stylesheet">
-  <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-  <link href="css/style.min.css" rel="stylesheet">
-  <link href="css/style-responsive.css" rel="stylesheet" />
-  <link href="css/spinner.css" rel="stylesheet">
-  <link href="assets/fancybox/jquery.fancybox.css" rel="stylesheet" />
-  <link href="css/gallery.css" rel="stylesheet" />
-  <script>
+  <link href="../css/bootstrap.min.css" rel="stylesheet">
+  <link href="../css/bootstrap-reset.css" rel="stylesheet">
+  <link href="../assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="../css/style.min.css" rel="stylesheet">
+  <link href="../css/style-responsive.css" rel="stylesheet" />
+  <link href="../css/spinner.css" rel="stylesheet">
+  <link href="../assets/fancybox/jquery.fancybox.css" rel="stylesheet" />
+  <link href="../css/gallery.css" rel="stylesheet" />
+<script>
+  function cancelListing() {
+    var listingid = (getQueryVariable("itemid"));
+    $.post(Constants.apiUrl, {
+      requestType: 'dgsDelisting',
+      goods: listingid,
+      secretPhrase: $("#secret_phrase").val(),
+      feeNQT: 100000000,
+      deadline: 60
+    },
+    function(result) {
+        var errorCode = result.errorCode;
+        if (!errorCode) {
+          var listingID = result.transaction;
+          var fmlang = localStorage.getItem("fmlang");
+          var success = $.t("success");
+          document.getElementById("panel-heading").innerHTML = success;
+          var cancelMessage = $.t("success_cancel");
+          document.getElementById("panel-body").innerHTML = cancelMessage + "<b>" + listingID + "</b><br/><br/>";
+          document.getElementById("cancelButtonSection").style.display = "none";
+          } else { 
+            var errorDescription = result.errorDescription;
+            var errorCode = result.errorCode;
+              var post_failure = $.t("failure_cancel");
+              document.getElementById("listingResult").innerHTML = post_failure + "<b> " + errorDescription + "</b>";
+            }
+        }, "json");}
+</script>
+<script>
   function showItem() {
     var listingid = (getQueryVariable("itemid"));
     $.post(Constants.apiUrl, {
@@ -26,12 +54,22 @@
         var data = JSON.parse(request.description);
         var id = request.goods;
         var seller = request.sellerRS;
+        var delisted = request.delisted;
+        if (delisted == "true") {
+          document.getElementById("cancelButtonSection").innerHTML = " "; // Remove purchase button if delisted
+        } 
+        if (request.quantity == 0){
+          document.getElementById("cancelButtonSection").innerHTML = " "; // Remove purchase button if 0 avail
+        }
         var displayCurrency = escapeHtml(data.c);
         var displayPrice = escapeHtml(data.p);
         var displayPriceWithCurrency = displayPrice + " " + displayCurrency;
         document.getElementById("title").innerHTML = escapeHtml(request.name);
         document.getElementById("itemID").innerHTML = escapeHtml(id);
+        document.getElementById("itemIDModal").innerHTML = escapeHtml(id);
         document.getElementById("price").innerHTML = escapeHtml(displayPriceWithCurrency);
+        document.getElementById("sellerID").innerHTML = seller;
+        // Set Seller ID and Price Units in session
         sessionStorage.setItem("price", displayPrice);
         sessionStorage.setItem("seller", seller);
       }, "json"); 
@@ -48,41 +86,87 @@
         var location = data.l;
         getCityName(location);
         document.getElementById("description").innerHTML = escapeHtml(message.d);
-        if (message.s != "") {
-        document.getElementById("shipping").innerHTML = escapeHtml(message.s);
-        } else {
-        document.getElementById("shipping").innerHTML = "Local Pickup Only";
-        }
-        if (message.sp != ""){
-        document.getElementById("shipping_price").innerHTML = escapeHtml(message.sp)+' '+escapeHtml(displayCurrency);
-        } else {
-        document.getElementById("shipping_price").innerHTML = "N/A";
-        }
         if (message.i != "") {
           main_image_url = "Yes";
         }
+        if (message.i1 != "") {
+          additional_image_1_URL = "Yes";
+        }
+        if (additional_image_2_URL != "") {
+          additional_image_2_URL = "Yes";
+        }
+        if (additional_image_3_URL != "") {
+          additional_image_3_URL = "Yes";
+        }
+        if (additional_image_4_URL != "") {
+          additional_image_4_URL = "Yes";
+        }
         if (main_image_url) {
-          // If there is a main_image_url, check it
-          // Clean the main image URL using validator.min.js
           if (validator.isURL(message.i)) {
-            // Field is a URL
-            // Now check to make sure the URL is for an image
             var Extension = message.i.substring(message.i.lastIndexOf('.') + 1).toLowerCase();
             if (Extension == "gif" || Extension == "png" || Extension == "jpeg" || Extension == "jpg") {
-              // Valid image extension
               var main_image_url = escapeHtml(message.i);
             } else {
-              // URL is not for an image file
               var main_image_url = "img/Box-icon.png";
             }
           } else {
-            // Field is not a valid URL
             var main_image_url = "img/Box-icon.png";
           }
-          // Add the image to the page
           document.getElementById("top_image").innerHTML = '<a id="previewMainImageLink" class="fancybox" rel="group" href="' + main_image_url + '"><img alt="" src="' + main_image_url + '"></a>';
-        } // End of if (main_image_url)
-        });
+        } 
+        var additional_images_section = '<div>';
+        if (additional_image_1_URL) {
+          if (validator.isURL(message.i1)) {
+            var Extension = message.i1.substring(message.i1.lastIndexOf('.') + 1).toLowerCase();
+            if (Extension == "gif" || Extension == "png" || Extension == "jpeg" || Extension == "jpg") {
+              var additional_image_1_URL = escapeHtml(message.i1);
+              additional_images_section += '<a id="previewMainImageLink" class="fancybox" rel="group" href="' + additional_image_1_URL + '"><img src="' + additional_image_1_URL + '" width="200" height="200" alt="Image 1" /></a>';
+            } else {
+              var additional_image_1_URL = "img/Box-icon.png";
+            }
+          } else {
+            var additional_image_1_URL = "img/Box-icon.png";
+          }} 
+        if (additional_image_2_URL) {
+          if (validator.isURL(message.i2)) {
+            var Extension = message.i2.substring(message.i2.lastIndexOf('.') + 1).toLowerCase();
+            if (Extension == "gif" || Extension == "png" || Extension == "jpeg" || Extension == "jpg") {
+              var additional_image_2_URL = escapeHtml(message.i2);
+              additional_images_section += '<a id="previewMainImageLink" class="fancybox" rel="group" href="' + additional_image_2_URL + '"><img src="' + additional_image_2_URL + '" width="200" height="200" alt="Image 2" /></a>';
+            } else {
+              var additional_image_2_URL = "img/Box-icon.png";
+            }
+          } else {
+            var additional_image_2_URL = "img/Box-icon.png";
+          }} 
+        if (additional_image_3_URL) {
+          if (validator.isURL(message.i3)) {
+            var Extension = message.i3.substring(message.i3.lastIndexOf('.') + 1).toLowerCase();
+            if (Extension == "gif" || Extension == "png" || Extension == "jpeg" || Extension == "jpg") {
+              var additional_image_3_URL = escapeHtml(message.i3);
+              additional_images_section += '<a id="previewMainImageLink" class="fancybox" rel="group" href="' + additional_image_3_URL + '"><img src="' + additional_image_3_URL + '" width="200" height="200" alt="Image 3" /></a>';
+            } else {
+              var additional_image_3_URL = "img/Box-icon.png";
+            }
+          } else {
+            var additional_image_3_URL = "img/Box-icon.png";
+          }}
+        if (additional_image_4_URL) {
+          if (validator.isURL(message.i4)) {
+            var Extension = message.i4.substring(message.i4.lastIndexOf('.') + 1).toLowerCase();
+            if (Extension == "gif" || Extension == "png" || Extension == "jpeg" || Extension == "jpg") {
+              var additional_image_4_URL = escapeHtml(message.i4);
+              additional_images_section += '<a id="previewMainImageLink" class="fancybox" rel="group" href="' + additional_image_4_URL + '"><img src="' + additional_image_4_URL + '" width="200" height="200" alt="Image 4" /></a>';
+            } else {
+              var additional_image_4_URL = "img/Box-icon.png";
+            }
+          } else {
+            var additional_image_4_URL = "img/Box-icon.png";
+          }}
+        if (additional_images_section) {
+          additional_images_section += '</div><br />';
+          document.getElementById("extra_images_section").innerHTML = additional_images_section;
+        }});
         var cities = {   
         "aub":  " Auburn, Alabama ",
         "bhm":  " Birmingham, Alabama ",
@@ -463,7 +547,7 @@
 </head>
 <body class="full-width" onload="setAccountNumber(); showItem(); setLanguage();">
   <section id="container">
-    <script type="text/javascript" src="js/menu.js"></script>
+    <script type="text/javascript" src="../js/menu.js"></script>
     <section id="main-content">
       <section class="wrapper">
         <div class="row">
@@ -479,41 +563,43 @@
                         <div class="user-heading alt">
                           <span id="top_image"><a href="#"><img alt="" src="img/Box-icon.png"></a></span>
                           <h1 id="title">No Item Title</h1>
-                          <p><b> <span data-i18n="pending">Pending</span></b></p>
+                          <p><b> <span data-i18n="seller_id">Seller ID</span>:</b> <span id="sellerID"></span></p>
                           </div>
                           <div>
                           <p><b> <span data-i18n="description">Description</span>:</b> <span id="description"></span></p></b>
                           <p><b> <span data-i18n="price">Price</span>:</b> <span id="price"></span></p>
                           <p><b> <span data-i18n="location">Location</span>:</b> <span id="location"></span></p>
                           </div>
+                          <div class="user-heading alt" id="extra_images_section"></div>
+                          </div>
                       </section>
                     </aside>
                     <span id="listingResult"></span>
-                    <span id="payment"></span>
-                    <div id="purchaseButtonSection">
-                      <button class="btn btn-default"><span data-i18n="message_to_buyer">Message Buyer</span></button>
-                      <button class="btn btn-danger" data-toggle="modal" data-target="#myModal"><span data-i18n="button_finalize_purchase">Finalize Sale</span></button>
+                    <div id="cancelButtonSection">
+                      <button class="btn btn-danger" data-toggle="modal" data-target="#myModal"><span data-i18n="button_cancel_listing">Cancel Listing</span></button>
                     </div> 
-                    <!-- Purchase Modal -->
+                    <!-- Cancel Modal -->
                     <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="myModal" class="modal fade">
                         <div class="modal-dialog">
                           <div class="modal-content">
                             <div class="modal-header">
                               <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
-                              <h4 class="modal-title"><span data-i18n="button_finalize_purchase">Finalize Sale</span></h4>
+                              <h4 class="modal-title"><span data-i18n="button_cancel_listing">Cancel Listing</span></h4>
                             </div>
                             <div class="modal-body">
-                              <p><span>Enter your account secret phrase to finalize this sale.</span></p>
+                          <p><b> <span data-i18n="item_id">Item ID</span>: </b> <span id="itemIDModal"></span></p>
+                              <p><span>Please confirm by entering your account secret phrase.</span></p>
                               <div class="form-group">
-                              <label for="secret_phrase"><b><span data-i18n="account_number">BLX Account Number</span></b> :</label>
+                              <label for="secret_phrase"><b><span data-i18n="secret_phrase">Your Account Secret Phrase</span></b> :</label>
                               <div class="iconic-input">
                                 <i class="fa fa-bars"></i>
                                 <input type="password" class="form-control" data-i18n="[placeholder]placeholder_required" id="secret_phrase" autofocus>
                               </div>
                               <br/>
                                 <button data-dismiss="modal" class="btn btn-secondary" type="button">Close</button>&nbsp;
-                                <button data-dismiss="modal" class="btn btn-default" type="button" onclick=""><span data-i18n="button_finalize_purchase">Finalize Sale</span></button>
+                                <button data-dismiss="modal" class="btn btn-danger" type="button" onclick="cancelListing()"><span data-i18n="button_cancel_listing">Cancel Listing</span></button>
                             </div>
+                            <p>The network fee of this transaction is 1 BLX.</p>
                             </div>
                           </div>
                         </div>
@@ -529,21 +615,21 @@
       </section>
     </section>
   </section>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery.dcjqaccordion.2.7.min.js"></script>
-  <script src="js/bootstrap-hover-dropdown.min.js"></script>
-  <script src="assets/fancybox/jquery.fancybox.js"></script>
-  <script src="js/validator.min.js"></script>
+  <script src="../js/jquery.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/jquery.dcjqaccordion.2.7.min.js"></script>
+  <script src="../js/bootstrap-hover-dropdown.min.js"></script>
+  <script src="../assets/fancybox/jquery.fancybox.js"></script>
+  <script src="../js/validator.min.js"></script>
   <script type="text/javascript">
   $(function() {
     jQuery(".fancybox").fancybox();
   });
   </script>
-  <script src="js/constants.js"></script>
-  <script src="js/freemarket_scripts.js"></script>
-  <script src="js/common-scripts.js"></script>
-  <script src="js/i18next.min.js"></script>
-  <script src="js/freemarket_localization_scripts.js"></script>
+  <script src="../js/constants.js"></script>
+  <script src="../js/freemarket_scripts.js"></script>
+  <script src="../js/common-scripts.js"></script>
+  <script src="../js/i18next.min.js"></script>
+  <script src="../js/freemarket_localization_scripts.js"></script>
 </body>
 </html>
