--- a/usdx.html
+++ b/usdx.html
@@ -17,7 +17,7 @@
 		<div class="menu-wrap">
 			<h1 class="logo"><a>Blue0x|Market</a></h1>
 			<i class="icon-remove menu-close"></i>
-			<a href="./market/index_login.html" class="smoothScroll">View My Account</a>
+			<a href="./market/usdx/index_login.html" class="smoothScroll">View My Account</a>
 			<a href="https://learn.blue0x.com" class="smoothScroll">Learn More</a>
 			<a href="https://learn.blue0x.com/setup/vps/" class="smoothScroll">Need a Wallet?</a>
 			<a href="https://twitter.com/Blue0x_com"><i class="fab fa-twitter"></i></a>
@@ -33,8 +33,8 @@
 			<div class="row">
 				<h1>BLUE0X|<span>MARKET</span></h1>
 				<h2>BLUE0X <span>MARKET</span></h2>
-				</br>
-				<a type="button" class="btn btn-primary" href="./market/index_v.html">&nbsp;View All&nbsp;</a>&ensp;<a type="button" class="btn btn-primary"href="./market/index_l.html">Sell Item</a>
+				<p style="color:white;">USDX - United States Dollar Market.</p>
+				<a type="button" class="btn btn-primary" href="./market/usdx/index_v.html">&nbsp;View All&nbsp;</a>&ensp;<a type="button" class="btn btn-primary"href="./market/usdx/index_l.html">Sell Item</a>
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /headerwrap -->
