add currency select

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<h2>BLUE0X <span>MARKET</span></h2>
 				<p style="color:white;">Buy and sell anything without fiat currency.</p>
 				<select class="form-control m-bot15" id="currency" onchange="location = this.value;">>
-					<option value="">Select Your Currency...</option>
+					<option value="">Select Your Blue0x Currency...</option>
 					<option value="usdx.html">USDX - United States Dollar</option>
 					<option value="">AUDX - Australian Dollar (Coming Soon!)</option>
 					<option value="">CHFX - Swiss Franc (Coming Soon!)</option>
