--- a/market/usdx/login.html
+++ b/market/usdx/login.html
@@ -55,8 +55,8 @@
         currency: Constants.USDXId
       },
       function(coinquery) {
-        if (coinquery == '{}') {
-          console.log(coinquery);
+        console.log(coinquery);
+        if (coinquery = '{}') {
             sessionStorage.setItem("USDXAccountBalance", "0 USDX");
             var replace_USDXAccountBalance = '';
             replace_USDXAccountBalance += '<div class="media-body">';
