--- a/market/usdx/login_view_account.html
+++ b/market/usdx/login_view_account.html
@@ -56,7 +56,7 @@
         currency: Constants.USDXId
       },
       function(coinquery) {
-        if (coinquery == '{}') {
+        if (coinquery = '{}') {
             sessionStorage.setItem("USDXAccountBalance", "0 USDX");
             var replace_USDXAccountBalance = '';
             replace_USDXAccountBalance += '<div class="media-body">';
