--- a/market/usdx/account_details.html
+++ b/market/usdx/account_details.html
@@ -68,7 +68,7 @@ function checkLogin() {
     },
     function(coinquery) {
       console.log(coinquery);
-      if (coinquery == '{}') {
+      if (coinquery = '{}') {
           sessionStorage.setItem("USDXAccountBalance", "0 USDX");
           document.getElementById("USDXAccountBalance").innerHTML = "0 USDX";
           document.getElementById("USDXbalance").innerHTML = 'Account Balance: <br /> 0 USDX';
