--- a/market/usdx/login_view_account.html
+++ b/market/usdx/login_view_account.html
@@ -20,7 +20,7 @@
   <script>
   function login() {
     var Account = document.getElementById('user_entered_account_number').value;
-    if (!Account) { // Form validation
+    if (!Account) { 
       document.getElementById("user_entered_account_numberErrorMessage").innerHTML = "<p>Account Number Required</p>";
     } else {
       var currentRSAccountNumber =$('#user_entered_account_number').val();
@@ -30,10 +30,9 @@
         includeEffectiveBalance: "true"
       },
       function(result) {
-          if (result.errorDescription == 'Unknown account') { // If this is not a valid account number
+          if (result.errorDescription == 'Unknown account') { 
             document.getElementById("user_entered_account_numberErrorMessage").innerHTML = "<p class=\"validation_message\">New or invalid BLX account.  New BLX accounts must first make an outgoing transaction from the Blue0x wallet.</p>";
             } else {
-            // Store the account number and balance
             var balance = result.balanceNQT / 100000000;
             sessionStorage.setItem("accountRS", result.accountRS);
             sessionStorage.setItem("accountBalance", balance);
@@ -56,7 +55,7 @@
         currency: Constants.USDXId
       },
       function(coinquery) {
-        if (coinquery = '{}') {
+        if (Object.keys(coinquery).length == 0) {
             sessionStorage.setItem("USDXAccountBalance", "0 USDX");
             var replace_USDXAccountBalance = '';
             replace_USDXAccountBalance += '<div class="media-body">';
