--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 		<div class="menu-wrap">
 			<h1 class="logo"><a>Blue0x|Market</a></h1>
 			<i class="icon-remove menu-close"></i>
+			<a href="https://blue0x.com" class="smoothScroll">Blue0x|HOME</a>
+			<a href="comingSoon.html" class="smoothScroll">Blue0x|EXCHANGE</a>
+			<a href="https://lite.blue0x.com" class="smoothScroll">Blue0x|LITE</a>
+			<a href="https://verify.blue0x.com" class="smoothScroll">Verify Transaction</a>
 			<a href="https://learn.blue0x.com" class="smoothScroll">Learn More</a>
 			<a href="https://learn.blue0x.com/setup/vps/" class="smoothScroll">Need a Wallet?</a>
 			<a href="https://twitter.com/Blue0x_com"><i class="fab fa-twitter"></i></a>
