change to explorer

--- a/usdx.html
+++ b/usdx.html
@@ -34,7 +34,7 @@
 				<h1>BLUE0X|<span>MARKET</span></h1>
 				<h2>BLUE0X <span>MARKET</span></h2>
 				<p style="color:white;">USDX - United States Dollar Market.</p>
-				<a type="button" class="myButton" href="./market/usdx/index_v.html">&nbsp;View All&nbsp;</a>&ensp;<a type="button" class="myButton" href="./market/usdx/index_l.html">Sell Item</a>
+				<a role="button" class="myButton" href="./market/usdx/index_v.html">View All</a>&nbsp;<a role="button" class="myButton" href="./market/usdx/index_l.html">Sell Item</a>
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /headerwrap -->
