change to explorer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<h1 class="logo"><a>Blue0x|Market</a></h1>
 			<i class="icon-remove menu-close"></i>
 			<a href="https://blue0x.com" class="smoothScroll">Blue0x|HOME</a>
-			<a href="comingSoon.html" class="smoothScroll">Blue0x|EXCHANGE</a>
+			<a href="https://exchange.blue0x.com" class="smoothScroll">Blue0x|EXCHANGE</a>
 			<a href="https://lite.blue0x.com" class="smoothScroll">Blue0x|LITE</a>
 			<a href="https://explorer.blue0x.com" class="smoothScroll">Verify Transaction</a>
 			<a href="https://learn.blue0x.com" class="smoothScroll">Learn More</a>
